# agent-corral

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FEATURE_RECOMMENDATIONS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/src/: lib.rs  preferences.rs
backend/src/claude_adapter/: mod.rs
backend/src/command_templates/: mod.rs
backend/src/commands/: claude.rs  history.rs  hooks.rs  mcp.rs  mod.rs  pack.rs  plugin.rs  preferences.rs  session.rs  skills.rs  terminal.rs  worktree.rs
backend/src/history_analyzer/: mod.rs
backend/src/pack_manager/: mod.rs
backend/src/plugin_manager/: mod.rs
backend/src/repo_registry/: mod.rs
backend/src/session_manager/: mod.rs
backend/src/terminal_launcher/: mod.rs
bridge/: Cargo.toml
bridge/src/: main.rs
frontend/: App.tsx  main.tsx  styles.css
frontend/components/: ConfigHealth.tsx  ConfigLinter.test.tsx  ConfigLinter.tsx  ConfigSummary.test.tsx  ConfigSummary.tsx  CreateWithAiModal.tsx  CrossRefs.test.tsx  CrossRefs.tsx  DocsLink.test.tsx  DocsLink.tsx  EffectiveConfig.tsx  ErrorBoundary.tsx  GlobalSearch.test.tsx  GlobalSearch.tsx  ImportWizard.test.tsx  ImportWizard.tsx  InlineValidation.test.tsx  InlineValidation.tsx  KeyValueEditor.tsx  KeyboardShortcuts.test.tsx  KeyboardShortcuts.tsx  PresetPicker.test.tsx  QuickLaunchBar.test.tsx  QuickLaunchBar.tsx  QuickSetup.test.tsx  QuickSetup.tsx  RepoSwitcher.test.tsx  RepoSwitcher.tsx  SchemaForm.test.tsx  SchemaForm.tsx  ScopeGuard.test.tsx  ScopeSwitcher.test.tsx  ScopeSwitcher.tsx  Section.tsx  Sidebar.test.tsx  Sidebar.tsx  TagInput.tsx  TemplateCrudModal.test.tsx  TemplateCrudModal.tsx  ThemeToggle.test.tsx  (+3 more)
frontend/hooks/: useKeyboardShortcuts.ts  usePluginSync.test.ts  usePluginSync.ts  useSchema.test.ts  useSchema.ts  useSessions.ts
frontend/lib/: presets.test.ts  presets.ts  tauri.test.ts  tauri.ts
frontend/pages/: AgentsPage.tsx  ClaudeMdPage.test.tsx  ClaudeMdPage.tsx  ConfigPage.test.tsx  ConfigPage.tsx  HistoryPage.tsx  HooksPage.test.tsx  HooksPage.tsx  McpPage.tsx  MemoryPage.tsx  OverviewPage.test.tsx  OverviewPage.tsx  PacksPage.tsx  PageDescriptions.test.tsx  PersonalizePage.test.tsx  PersonalizePage.tsx  PluginsPage.test.tsx  PluginsPage.tsx  SessionsPage.test.tsx  SessionsPage.tsx  SettingsPage.tsx  SkillsPage.test.tsx  SkillsPage.tsx  TemplatesPage.tsx
frontend/test/: setup.ts  test-utils.tsx
frontend/types/: index.test.ts  index.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  preferences.rs
src-tauri/src/claude_adapter/: mod.rs
src-tauri/src/command_templates/: mod.rs
src-tauri/src/commands/: claude.rs  mcp.rs  mod.rs  pack.rs  plugin.rs  repo.rs  session.rs  template.rs  terminal.rs  worktree.rs
src-tauri/src/pack_manager/: mod.rs
src-tauri/src/plugin_manager/: mod.rs
src-tauri/src/repo_registry/: mod.rs
src-tauri/src/session_manager/: mod.rs
src-tauri/src/terminal_launcher/: mod.rs
src/components/: ConfigSummary.test.tsx  ConfigSummary.tsx  PresetPicker.tsx  QuickSetup.tsx  ScopeGuard.tsx  Sidebar.tsx
src/hooks/: useRepos.ts  useSessions.ts
src/lib/: tauri.test.ts  tauri.ts
src/pages/: AgentsPage.tsx  ConfigPage.tsx  HooksPage.tsx  McpPage.tsx  MemoryPage.tsx  OverviewPage.tsx  PacksPage.tsx  PluginsPage.tsx  SessionsPage.test.tsx  SessionsPage.tsx  SettingsPage.tsx  SkillsPage.tsx  TemplatesPage.tsx
(+8 files in other folders)
