[package]
name = "agentcorral-bridge"
version = "0.1.0"
edition = "2021"
description = "AgentCorral Bridge CLI - session envelope and process management"

[[bin]]
name = "agentcorral-bridge"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
