[package]
name = "agent-corral"
version = "0.1.0"
edition = "2021"
description = "Claude Code Command Center"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
dirs = "5"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
glob = "0.3"

[lib]
name = "agent_corral_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
