[package]
name = "agent-corral"
version = "0.1.0"
edition = "2021"
description = "Claude Code Command Center"
license = "MIT"
repository = "https://github.com/llrowat/agent-corral"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
serde_yaml = "0.9"

[lib]
name = "agent_corral_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
